--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Scholar Scraper</title>
+    <title>ScholarHarvest</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,8 @@
     </style>
 </head>
 <body>
-    <h1>Google Scholar Scraper</h1>
+    <h1>ScholarHarvest</h1>
+    <p>A tool for harvesting academic information from Google Scholar</p>
     <button id="scrapeButton">Start Scraping</button>
     <div id="status"></div>
     <div id="results"></div>
